# vastxm

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  pyproject.toml
src/vastxm/: _log.py  bundle.py  cli.py  config.py  instance.py  select.py  ssh.py  vast.py  workflow.py
test_env/: pyproject.toml
tests/: test_bundle.py  test_cli.py  test_config.py  test_instance.py  test_ssh.py  test_workflow_dry_run.py
