[project]
name = "vastxm"
version = "0.1.0"
description = "Tiny CLI wrapper over vast.ai for launching one-off GPU training jobs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vastxm = "vastxm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vastxm"]

[dependency-groups]
dev = ["pytest>=8"]
